Try fix overflow in CC

--- a/component-library/components/home/left-right/left-right.scss
+++ b/component-library/components/home/left-right/left-right.scss
@@ -7,11 +7,11 @@
   align-items: center;
   overflow: hidden;
 
-  @media screen and (min-width: 600px) {
+  @media only screen and (min-width: 600px) {
     padding-inline: 24px;
   }
 
-  @media screen and (min-width: 1020px) {
+  @media only screen and (min-width: 1020px) {
     padding-inline: 150px;
   }
 
@@ -38,14 +38,14 @@
     justify-content: center;
     gap: 1rem;
 
-    @media screen and (min-width: 1020px) {
+    @media only screen and (min-width: 1020px) {
       flex-direction: row;
     }
   }
 
   
   &__text {
-    @media screen and (min-width: 1020px) {
+    @media only screen and (min-width: 1020px) {
       min-width: 50%;
     }
   }
@@ -53,7 +53,7 @@
   &__img {
     max-width: 620px;
 
-    @media screen and (min-width: 1020px) {
+    @media only screen and (min-width: 1020px) {
       translate: 42px 24px;
     }
   }
@@ -69,7 +69,7 @@
     margin-bottom: 30px;
     font-size: 2.5rem;
 
-    @media screen and (min-width: 1020px) {
+    @media only screen and (min-width: 1020px) {
       font-size: 3.25rem;
     }
   }
@@ -77,7 +77,7 @@
   p,
   a {
     font-size: 1rem;
-    @media screen and (min-width: 1020px) {
+    @media only screen and (min-width: 1020px) {
       font-size: 1.25rem;
     }
   }
